fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -222,5 +222,5 @@ body{
   border-radius: 10px;
 }
 ::-webkit-scrollbar-track{
-  background: transparent;
+  background: #050816;
 }
